# scrutiny-python

./: .codebanner.json  .coveragerc  .gitignore  .gitmodules  .mypy.ini  CMakeLists.txt  Dockerfile  JenkinsFile  Jenkinsfile  LICENSE  README.md  setup.py
.github/workflows/: scrutiny-app-mac.yml  scrutiny-app-ubuntu.yml  scrutiny-app-windows.yml  scrutiny-app.yml
apps/scripts/: make_testapp_memdump.sh
config/: rtt.json  serial.json  udp.json
core/: memdump.py  var_desc.py  variable.py
deploy/: windows-innosetup.iss
deploy/debian/: control  scrutiny.gui.default.desktop  scrutiny.gui.local-server.desktop
deploy/macos/: launcher.sh
deploy/windows/: environment.iss  main.iss
deployment/: code_header_maker.py  headers_definition.json
devtools/: code_header_maker.py  format_code.sh  headers_definition.json
examples/: CMakeLists.txt
examples/linux/: CMakeLists.txt
examples/linux/src/: hello.cpp
examples/scripts/: build.sh
examples/testapp/: CMakeLists.txt
examples/testapp/src/: argument_parser.cpp  argument_parser.h  file1.cpp  file1.h  file2.cpp  file2.h  main.cpp  udp_bridge.cpp  udp_bridge.h
firmware/: .gitignore  CMakeLists.txt  sources.cmake
firmware/example/linux/: CMakeLists.txt
firmware/inc/: collections.h  scrutiny.h  scrutiny_config.h  scrutiny_crc.h  scrutiny_loop_handler.h  scrutiny_main_handler.h  scrutiny_setup.h  scrutiny_software_id.h  scrutiny_timebase.h  scrutiny_types.h
firmware/inc/protocol/: scrutiny_codec_v1_0.h  scrutiny_comm_handler.h  scrutiny_protocol.h  scrutiny_protocol_definitions.h  scrutiny_protocol_tools.h
firmware/lib/src/scrutiny/: scrutiny.cpp  scrutiny.hpp
firmware/scripts/: make_testapp_memdump.sh  run.sh
firmware/src/: scrutiny_config.cpp  scrutiny_crc.cpp  scrutiny_loop_handler.cpp  scrutiny_main_handler.cpp  scrutiny_software_id.cpp
firmware/src/protocol/: scrutiny_codec_v1_0.cpp  scrutiny_comm_handler.cpp  scrutiny_protocol.cpp  scrutiny_protocol_definitions.cpp
firmware/test/: CMakeLists.txt  runtest.bat  scrutiny_test.cpp  scrutiny_test.h  test_crc.cpp  test_timebase.cpp
firmware/test/commands/: test_comm_control.cpp  test_command_get_info.cpp  test_get_info.cpp  test_memory_control.cpp  test_user_command.cpp
firmware/test/protocol/: test_comm_handler.cpp  test_protocol.cpp  test_protocol_get_info.cpp  test_protocol_rx_parsing.cpp  test_protocol_tx_parsing.cpp
firmware/testapp/: CMakeLists.txt
firmware/testapp/src/: file1.cpp  file1.h  file2.cpp  file2.h  main.cpp
lib/: CMakeLists.txt
lib/inc/: scrutiny.h  scrutiny_config.h  scrutiny_crc.h  scrutiny_loop_handler.h  scrutiny_main_handler.h  scrutiny_setup.h  scrutiny_software_id.h  scrutiny_timebase.h  scrutiny_types.h
lib/src/: scrutiny_config.cpp  scrutiny_crc.cpp  scrutiny_loop_handler.cpp  scrutiny_main_handler.cpp  scrutiny_software_id.cpp
lib/test/: CMakeLists.txt  scrutiny_test.cpp  scrutiny_test.h  test_crc.cpp  test_timebase.cpp
python/: requirements.txt  setup.py
python/scripts/: run_tests.sh  with-venv.sh
python/scrutiny/: __init__.py  __main__.py
python/test/: __init__.py
scripts/: activate-venv.sh  build.sh  build_app.sh  check-python-version.sh  check_python_version.sh  common.sh  format_code.sh  format_package_license.py  make-windows-installer.bat  make_debian_package.sh  make_license.sh  make_macos_dmg.sh  make_macos_dmg_name.sh  make_windows_installer.sh  make_windows_installer_name.sh  nuitka_build.sh  pypi_release.sh  release.sh  run_manual_gui_tests.sh  runtest.bat  runtests.sh  with-venv.sh
scrutiny/: __init__.py  __main__.py  exceptions.py
scrutiny/cli/: __init__.py  cli.py
scrutiny/core/: alias.py  basic_types.py  codecs.py  datalogging.py  embedded_enum.py  firmware_description.py  firmware_id.py  firmware_parser.py  logging.py  memory_content.py  sfd_storage.py  sfd_storage_manager.py  typehints.py  validation.py  variable.py  varmap.py
scrutiny/entry_points/: scrutiny-gui.py  scrutiny-server.py  scrutiny.py
scrutiny/gui/: __init__.py  app_settings.py  dashboard.py  exceptions.py  ext2contenttype.py  globals.py  gui.py  gui_client.py  main_window.py  qtads.py  scrutiny_gui_http_server.py  server_manager.py  sidebar.py  tools.py  watchable_index.py  watchable_storage.py
scrutiny/sdk/: __init__.py  _api_parser.py  _write_request.py  client.py  datalogging.py  definitions.py  exceptions.py  listeners.py  pending_request.py  watchable_handle.py  write_request.py
scrutiny/server/: active_sfd_handler.py  globals.py  server.py  sfd_storage.py  timebase.py
static_assets/: scrutiny-logo.xcf
stubs/: PySide6QtAds.pyi  appdirs.pyi
test/: __init__.py  scrutiny_runner.py
toolchain/: elf2vardesc.py  linuxapp  linuxminapp  test_elftools.py
(+624 files in other folders)
